<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="paxNum">Num of Pax</string>
    <string name="noSVS">No SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="payNow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="total">Total:</string>
    <string name="each">Each pays:</string>
</resources>